completed EDA on orders table

--- a/OnlineShoppingDB.ipynb
+++ b/OnlineShoppingDB.ipynb
@@ -2082,6 +2082,352 @@
                 "azdata_cell_guid": "bae58b8d-e864-46dc-b559-a62f78cf2193"
             },
             "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT TOP 1 *\n",
+                "FROM OnlineShoppingDB.dbo.orders "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "7795cb63-5238-4004-869c-62a4f63cc863",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.138"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 1,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "order_id"
+                                    },
+                                    {
+                                        "name": "order_date"
+                                    },
+                                    {
+                                        "name": "customer_id"
+                                    },
+                                    {
+                                        "name": "total_price"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "order_id": "1",
+                                    "order_date": "2024-10-10",
+                                    "customer_id": "8002",
+                                    "total_price": "165.18"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>order_id</th><th>order_date</th><th>customer_id</th><th>total_price</th></tr>",
+                            "<tr><td>1</td><td>2024-10-10</td><td>8002</td><td>165.18</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 1
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**i. What's the earliest date in this table?  The latest?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "0bb3998d-b2d0-4ba6-bae3-ded343ceb3db"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT \n",
+                "    MIN(order_date) AS earliest_date, \n",
+                "    MAX(order_date) AS latest_date\n",
+                "FROM OnlineShoppingDB.dbo.orders"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "799b63e0-3b17-434f-8362-37bc729844f9"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.018"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 3,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "earliest_date"
+                                    },
+                                    {
+                                        "name": "latest_date"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "earliest_date": "2023-11-05",
+                                    "latest_date": "2024-11-04"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>earliest_date</th><th>latest_date</th></tr>",
+                            "<tr><td>2023-11-05</td><td>2024-11-04</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 3
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**ii. What's the highest price in this table?  The lowest?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "2d11a67f-4271-439d-8d6c-63d77485f00e"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT\n",
+                "    MIN(total_price) AS lowest_price,\n",
+                "    MAX(total_price) AS highest_price\n",
+                "FROM OnlineShoppingDB.dbo.orders"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "5ba92890-8923-4dad-8f83-eac569096bc7"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.046"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 4,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "lowest_price"
+                                    },
+                                    {
+                                        "name": "highest_price"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "lowest_price": "20.46",
+                                    "highest_price": "10082.72"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>lowest_price</th><th>highest_price</th></tr>",
+                            "<tr><td>20.46</td><td>10082.72</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 4
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**iii. How many orders are present in this table?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "9fd6fe79-964a-4fa2-b914-008bf5171f08"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT COUNT(order_id) AS num_orders\n",
+                "FROM OnlineShoppingDB.dbo.orders\n",
+                ""
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "9e3b7913-568d-4c3c-8449-d8058fc16cba"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.014"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 5,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "num_orders"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "num_orders": "15000"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>num_orders</th></tr>",
+                            "<tr><td>15000</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 5
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**iv. Is there a different number of _unique_ orders?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "3540e0aa-5c0c-4d73-89ad-e34d35883546"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT COUNT(DISTINCT order_id) AS num_unique_ordes\n",
+                "FROM OnlineShoppingDB.dbo.orders\n",
+                "\n",
+                "--No"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "be757ac1-a3cd-4709-8dcc-7987b1b56894"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.026"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 6,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "num_unique_ordes"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "num_unique_ordes": "15000"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>num_unique_ordes</th></tr>",
+                            "<tr><td>15000</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 6
         }
     ]
 }
