completed EDA of order_items table

--- a/OnlineShoppingDB.ipynb
+++ b/OnlineShoppingDB.ipynb
@@ -2375,7 +2375,7 @@
         {
             "cell_type": "code",
             "source": [
-                "SELECT COUNT(DISTINCT order_id) AS num_unique_ordes\n",
+                "SELECT COUNT(DISTINCT order_id) AS num_unique_orders\n",
                 "FROM OnlineShoppingDB.dbo.orders\n",
                 "\n",
                 "--No"
@@ -2395,39 +2395,458 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.026"
+                        "text/html": "Total execution time: 00:00:00.014"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 6,
+                    "execution_count": 9,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
                                 "fields": [
                                     {
-                                        "name": "num_unique_ordes"
+                                        "name": "num_unique_orders"
                                     }
                                 ]
                             },
                             "data": [
                                 {
-                                    "num_unique_ordes": "15000"
+                                    "num_unique_orders": "15000"
                                 }
                             ]
                         },
                         "text/html": [
                             "<table>",
-                            "<tr><th>num_unique_ordes</th></tr>",
+                            "<tr><th>num_unique_orders</th></tr>",
                             "<tr><td>15000</td></tr>",
                             "</table>"
                         ]
                     }
                 }
             ],
-            "execution_count": 6
+            "execution_count": 9
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**v. How many customer\\_ids are present in this table?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "22ab8b2a-75b3-4eea-aec6-ce1ee5acde06"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT COUNT(customer_id) AS num_cumstomers\n",
+                "FROM OnlineShoppingDB.dbo.orders "
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "e3c390ed-6e01-415a-8c15-cf3df0c588bd"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.016"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 10,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "num_cumstomers"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "num_cumstomers": "15000"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>num_cumstomers</th></tr>",
+                            "<tr><td>15000</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 10
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**vi. Is there a different number of _unique_ customer\\_ids?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "a449c9eb-d48f-4aaf-ad3a-7e0f18de263b"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT COUNT(DISTINCT customer_id) AS num_unique_customers\n",
+                "FROM OnlineShoppingDB.dbo.orders \n",
+                "\n",
+                "--Yes! "
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "5e4aed8e-e92b-4ca5-8379-2c26b26f6886"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.032"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 11,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "num_unique_customers"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "num_unique_customers": "10000"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>num_unique_customers</th></tr>",
+                            "<tr><td>10000</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 11
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### **C. The order-items table.**"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "edbabd4a-3909-4945-961f-67a0f51f1c85"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT TOP 1 *\n",
+                "FROM OnlineShoppingDB.dbo.order_items"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "22b06593-ec9f-4741-83c2-f0d421d583ea",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.053"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 7,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "order_item_id"
+                                    },
+                                    {
+                                        "name": "order_id"
+                                    },
+                                    {
+                                        "name": "product_id"
+                                    },
+                                    {
+                                        "name": "quantity"
+                                    },
+                                    {
+                                        "name": "price_at_purchase"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "order_item_id": "1",
+                                    "order_id": "6550",
+                                    "product_id": "1032",
+                                    "quantity": "1",
+                                    "price_at_purchase": "342.92"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>order_item_id</th><th>order_id</th><th>product_id</th><th>quantity</th><th>price_at_purchase</th></tr>",
+                            "<tr><td>1</td><td>6550</td><td>1032</td><td>1</td><td>342.92</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 7
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**i. How many order\\_Ids are there in this table?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "ac184481-61c1-4c82-993e-4dbb67204855"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT COUNT(order_id) AS num_orders\n",
+                "FROM OnlineShoppingDB.dbo.order_items"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "aff1f88d-3498-47e1-8a91-50bae6133e2b"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.010"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 13,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "num_orders"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "num_orders": "20000"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>num_orders</th></tr>",
+                            "<tr><td>20000</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 13
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**ii. Is there a different number of _unique_ order\\_ids in this table?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "b2638813-b262-4502-a7d2-eae9ed8c570d"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT COUNT(DISTINCT order_id) AS num_unique_orders\n",
+                "FROM OnlineShoppingDB.dbo.order_items"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "45b82ab5-9b15-40cc-a8eb-09af63f03350"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.018"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 15,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "num_unique_orders"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "num_unique_orders": "15000"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>num_unique_orders</th></tr>",
+                            "<tr><td>15000</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 15
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**iii. What is the largest quantity in an order?  The smallest?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "64bebd46-23d0-4fcd-9a36-e785837b525d"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT \n",
+                "    MAX(quantity) AS largest_quantity, \n",
+                "    MIN(quantity) AS smallest_quantity\n",
+                "FROM OnlineShoppingDB.dbo.order_items"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "0944db15-b5de-48c3-bbd5-cb03d53ab437"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.045"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 16,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "largest_quantity"
+                                    },
+                                    {
+                                        "name": "smallest_quantity"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "largest_quantity": "10",
+                                    "smallest_quantity": "1"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>largest_quantity</th><th>smallest_quantity</th></tr>",
+                            "<tr><td>10</td><td>1</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 16
         }
     ]
 }
