completed EDA of payment table

--- a/OnlineShoppingDB.ipynb
+++ b/OnlineShoppingDB.ipynb
@@ -2847,6 +2847,229 @@
                 }
             ],
             "execution_count": 16
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### **D. The payment table.**"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "69ad4bd6-e802-4b61-a744-34c18c3e377b"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT TOP 1 *\n",
+                "FROM OnlineShoppingDB.dbo.payment"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "2f191b4d-f8a7-405e-8b0e-0874695f706b",
+                "language": "sql"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.082"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 17,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "payment_id"
+                                    },
+                                    {
+                                        "name": "order_id"
+                                    },
+                                    {
+                                        "name": "payment_method"
+                                    },
+                                    {
+                                        "name": "amount"
+                                    },
+                                    {
+                                        "name": "transaction_status"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "payment_id": "1",
+                                    "order_id": "1",
+                                    "payment_method": "Credit Card",
+                                    "amount": "232.15",
+                                    "transaction_status": "Completed"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>payment_id</th><th>order_id</th><th>payment_method</th><th>amount</th><th>transaction_status</th></tr>",
+                            "<tr><td>1</td><td>1</td><td>Credit Card</td><td>232.15</td><td>Completed</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 17
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**i. What are the different types of payment\\_method contained in the table?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "b3fd6dd9-34a2-4ffb-9547-b9a2f64346e7"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT DISTINCT payment_method\n",
+                "FROM OnlineShoppingDB.dbo.payment\n",
+                "\n",
+                "--There's only 1?  I guess that makes sense, given that this is *online* shopping! "
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "c6adb561-8a0d-4b01-a052-b2ec202c95ee"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.106"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 18,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "payment_method"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "payment_method": "Credit Card"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>payment_method</th></tr>",
+                            "<tr><td>Credit Card</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 18
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**ii. What about types of transaction\\_status?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "f70fcf92-80ed-450f-aad6-03ac2c8b3895"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT DISTINCT transaction_status\n",
+                "FROM OnlineShoppingDB.dbo.payment "
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "d12f4328-9e0b-4a09-a3ac-c77f5d9b96df"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.052"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 19,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "transaction_status"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "transaction_status": "Pending"
+                                },
+                                {
+                                    "transaction_status": "Failed"
+                                },
+                                {
+                                    "transaction_status": "Completed"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>transaction_status</th></tr>",
+                            "<tr><td>Pending</td></tr>",
+                            "<tr><td>Failed</td></tr>",
+                            "<tr><td>Completed</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 19
         }
     ]
 }
